2001-03-27  Larry Ewing  <lewing@ximian.com>

	* htmliframe.c (destroy): disconnect the signals from the html
	widget that refer to the iframe since the iframe_created.
	(html_iframe_class_init): use the new destroy handler.

2001-03-26  Larry Ewing  <lewing@ximian.com>

	* keybindingsrc.emacs: disable autofill.

2001-03-27  Radek Doulik  <rodo@ximian.com>

	* htmltable.c (append_selection_string): start tabbing on first
	non-empty cell

	* htmlclueflow.c (merge): use style of second flow if first one is
	empty
	(pref_right_margin): removed unused variable

	* htmlengine-search.c (move_to_found): fixed coordinates
	calculation

	* htmlclueflow.c (calc_preferred_width): don't remove trailing
	space width on the end of paragraph

2001-03-26  Larry Ewing  <lewing@ximian.com>

	* Makefile.am: add htmlplainpainter.[ch]

	* htmlclueflow.c (pref_right_margin): determine the prefered
	margin based on the width of the line in plain painters.

2001-03-26  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-search.c (gtk_html_engine_search_incremental): added
	wrappers around html_engine_search_... methods

	* htmltokenizer.c (in_extension): even more safe extension
	handling

	* htmlcolor.c (html_color_unref): really free color

	* htmlengine.c (parse_d): better checking

	* htmltokenizer.c (in_extension): don't check for extension end in
	quted input

2001-03-26  Larry Ewing  <lewing@ximian.com>

	* htmlplainpainter.c: html painter for plain mode.  The idea here
	is that rather than loosing valuable information when converting
	from html to plain and back again we change the painter to draw
	the html how it will render in text plain mode.  This is not close
	to perfect yet, but with a little work it should get better.

	* htmlplainpainter.h: header for plain mode.

2001-03-22  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c: remove references to load_in_progress.
	gtk_html_write and gtk_html_end are now just proxies to
	gtk_html_stream_write and gtk_html_stream_end.
